# porter

./: README.md  Test.hs  porter.cabal
Text/Stem/: Porter.hs  StemWord.hs
tests/: tests.json
